--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,8 @@
         }
     ],
     "require": {
-        "php": ">=7.^",
-        
+        "php": ">=7.0",
+        "laravel/framework": "^8.75",
         "parse/php-sdk": "^1.2.1"
     },
     "autoload": {
