Support for Laravel 8

--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     },
     "autoload": {
         "psr-4": {
-            "Sirthxalot\\Parse\\": "src/Sirthxalot/Parse"
+            "Sirthxalot\\Parse\\": "src/asartec/Parse"
         }
     },
     "config": {
